Se movio codigo parcial de vista de perfil de equipo de main-equipo a equipo-view

--- a/src/app/equipos/equipo-view/equipo-view.component.html
+++ b/src/app/equipos/equipo-view/equipo-view.component.html
@@ -1,1 +1,44 @@
-<p>equipo-view works!</p>
+<div class="Equipo-Profile">
+    <div class="portada">
+        <img src="https://images8.alphacoders.com/380/380531.jpg" alt="">
+    </div>
+    <div class="picture">
+        <img src="https://cdn.cloudflare.steamstatic.com/apps/dota2/images/rubick_arcana/finger_of_death.png" alt="">
+    </div>
+    <div class="minidetails">
+        <div class="md-tag">ELAD</div>
+        <div class="md-tamaño">55/31</div>
+        <div class="md-nacionalidad">PERU</div>
+        <div class="button-soli">Enviar Solicitud</div>
+    </div>
+
+    <div class="bodyProfile">
+        <div class="bp-left">
+            <div class="nombre">
+                Black Ops Gaming
+            </div>
+            <div class="descripcion">
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. A dolore atque est doloribus. 
+                Quasi, impedit! Quis impedit aut excepturi dolore sapiente facere, qui pariatur? Cumque 
+                quibusdam omnis atque sequi nam!
+            </div>
+        </div>
+        <div class="bp-right">
+            <div class="game">
+                <img src="https://www.makinggames.biz/wp-content/uploads/2017/04/Dota-2-Teaser.jpg" alt="">
+                DOTA 2
+            </div>
+            <div class="administrador">
+                <div class="portrait"></div>
+                <div class="adm-img">
+                    <img src="https://up.quizlet.com/1carcd-qGup4-256s.jpg" alt="">
+                </div>
+                <div class="adm-title">
+                    <h3>Rika Furude</h3>
+                    Administrador
+                </div>
+                <div class="adm-content"></div>
+            </div>
+        </div>
+    </div>
+</div>
